Add local storage manager w/o sync with net

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   intl: any
   http: ^1.0.0
   uuid: ^3.0.7
+  sembast: ^3.4.9
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
