Update readme, update verison, add changelog

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: tododo
 description: TODO list
-
 publish_to: 'none'
+repository: 'https://github.com/qwert21ant/tododo'
 
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
