--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   uuid: ^3.0.7
   sembast: ^3.4.9
   path_provider: ^2.0.15
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
