--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   sembast: ^3.4.9
   path_provider: ^2.0.15
   flutter_bloc: ^8.1.3
+  synchronized: ^3.1.0
 
 dev_dependencies:
   flutter_test:
