--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+
   flutter_localizations:
     sdk: flutter
   intl: any
+
   http: ^1.0.0
   uuid: ^3.0.7
   sembast: ^3.4.9
   path_provider: ^2.0.15
+
+  get_it: ^7.6.0
   flutter_bloc: ^8.1.3
   synchronized: ^3.1.0
 
