--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   get_it: ^7.6.0
   flutter_bloc: ^8.1.3
   synchronized: ^3.1.0
+  theme_tailor_annotation: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,10 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
+  build_runner:
+
+  theme_tailor: ^2.0.0
 
 flutter:
   uses-material-design: true
