--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   synchronized: ^3.1.0
   theme_tailor_annotation: ^2.0.0
 
+  firebase_core: ^2.14.0
+  firebase_crashlytics: ^3.3.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
