--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_crashlytics: ^3.3.3
   firebase_analytics: ^10.4.3
+  firebase_remote_config: ^4.2.3
 
 dev_dependencies:
   flutter_test:
