--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_crashlytics: ^3.3.3
   firebase_analytics: ^10.4.3
   firebase_remote_config: ^4.2.3
+  flutter_flavor: ^3.1.1
 
 dev_dependencies:
   flutter_test:
