--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,12 +3,18 @@ name: Testing
 on:
   push:
   pull_request:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
   main:
     name: Testing
     runs-on: ubuntu-latest
+
+    env:
+      ANDROID_APP_ID: ${{ secrets.ANDROID_APP_ID }}
+      ANDROID_API_KEY: ${{ secrets.ANDROID_API_KEY }}
+      FLAVOR: TESTING
+
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
