--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -11,9 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 20
+          java-version: 17
+          distribution: oracle
       - uses: subosito/flutter-action@v2
         with:
           channel: stable
@@ -23,7 +24,7 @@ jobs:
 
       - name: Build apk
         run: |
-          cat <<< ${{ secrets.GOOGLE_SERVICES_CONTENT }} > ./android/app/google-services.json
+          cat <<< ${{ secrets.GOOGLE_SERVICES_CONTENT }} > android/app/google-services.json
           flutter build apk --release
 
       - name: Firebase App Distribution
