--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,8 +14,8 @@ jobs:
 
       - uses: actions/setup-java@v2
         with:
-          java-version: 17
-          distribution: temurin
+          java-version: 11
+          distribution: zulu
 
       - uses: subosito/flutter-action@v2
         with:
