--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: 17
           distribution: zulu
 
       - uses: subosito/flutter-action@v2
@@ -23,6 +23,9 @@ jobs:
 
       - name: Get dependencies
         run: flutter pub get
+
+      - name: Load google-services.json
+        run: cat "${{ secrets.GOOGLE_SERVICES_CONTENT }}" > android/app/google-services.json
 
       - name: Build apk
         run: flutter build apk --release
@@ -35,6 +38,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v3
 
