--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Test, Build and Deploy
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    name: Build
+  test-and-build:
+    name: Test & Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -29,6 +29,15 @@ jobs:
         env:
           content: ${{ secrets.FIREBASE_OPTIONS_CONTENT }}
 
+      - name: Check code format
+        run: dart format -o none --set-exit-if-changed .
+
+      - name: Static analyzer
+        run: flutter analyze --fatal-infos .
+
+      - name: Run unit tests
+        run: flutter test test
+
       - name: Load google-services.json
         run: echo "$content" > android/app/google-services.json
         env:
@@ -45,7 +54,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    needs: build
+    needs: test-and-build
     steps:
       - uses: actions/checkout@v3
 
